--- a/WardrobeApp/WardrobeApp.Client/_Imports.razor
+++ b/WardrobeApp/WardrobeApp.Client/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using WardrobeApp.Client
+@using WardrobeApp.Shared.Models
+@using WardrobeApp.Shared.Interfaces
+
