--- a/WardrobeApp/WardrobeApp/Components/Pages/Home.razor
+++ b/WardrobeApp/WardrobeApp/Components/Pages/Home.razor
@@ -4,4 +4,4 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome to my first Blazor app. It's a simple CRUD app for handling your wardrobe. Feel free to explore it uses the navigation.
